minor-changes: minor css fixes and alignment issues

--- a/src/assets/sass/modules/PersonalInformation/_personal-information.scss
+++ b/src/assets/sass/modules/PersonalInformation/_personal-information.scss
@@ -16,7 +16,7 @@
 
   @include e(item) {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
   }
 
   @include e(label) {
